# Met_ML_Exhibitions

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  get_data.py  locustfile.py  met_data.csv  pyproject.toml  requirements.txt
config/: config.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep
data/results/: .gitkeep
docs/: BEST_PRACTICES.md  METHODOLOGY_AND_DECISIONS.md  QUICKSTART.md  presentation.md
notebooks/: 00_data_collection.ipynb
scripts/: build_features.py  cleanup_invalid_images.py  download_data.py  train_ranker.py
src/: __init__.py  bootstrap.py  config.py
src/api/: main.py  routes.py
src/app/: __init__.py  streamlit_app.py
src/data/: __init__.py  data_loader.py
src/features/: __init__.py  feature_engineering.py  image_features.py  nlp_utils.py  text_features.py
src/loaders/: __init__.py  image_api_loader.py
src/models/: __init__.py  recommender.py
tests/: test_api.py  test_data_loader.py  test_feature_builder.py  test_feature_engineering.py  test_image_api_loader.py  test_image_features.py  test_nlp_utils.py  test_recommender.py  test_text_features.py
